tree-sitter-weir/test/corpus/comments.txt
================================================================================
Line comment
================================================================================

; this is a comment

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
Comment before code
================================================================================

;; Top-level comment
(defn foo () 42)

--------------------------------------------------------------------------------

(source_file
  (comment)
  (list_expression
    (defn_form
      (defn_inner
        keyword: (defn_keyword)
        name: (symbol)
        params: (param_list)
        (number)))))

================================================================================
Comment inside function
================================================================================

(defn foo ()
  ;; inner comment
  42)

--------------------------------------------------------------------------------

(source_file
  (list_expression
    (defn_form
      (defn_inner
        keyword: (defn_keyword)
        name: (symbol)
        params: (param_list)
        (comment)
        (number)))))

================================================================================
Inline comment
================================================================================

(+ 1 2) ; adds one and two

--------------------------------------------------------------------------------

(source_file
  (list_expression
    (call_expr
      function: (operator)
      (number)
      (number)))
  (comment))
