tree-sitter-weir/test/corpus/literals.txt
================================================================================
Integer literals
================================================================================

42
-7
0

--------------------------------------------------------------------------------

(source_file
  (number)
  (number)
  (number))

================================================================================
Float literals
================================================================================

3.14
-0.5
1.0

--------------------------------------------------------------------------------

(source_file
  (float)
  (float)
  (float))

================================================================================
String literal
================================================================================

"hello world"

--------------------------------------------------------------------------------

(source_file
  (string))

================================================================================
String with escapes
================================================================================

"hello\nworld\t\"quoted\""

--------------------------------------------------------------------------------

(source_file
  (string))

================================================================================
Boolean literals
================================================================================

true
false

--------------------------------------------------------------------------------

(source_file
  (boolean)
  (boolean))

================================================================================
Keywords
================================================================================

:name
:age
:health_points

--------------------------------------------------------------------------------

(source_file
  (keyword)
  (keyword)
  (keyword))

================================================================================
Type variables
================================================================================

'a
'elem
'b

--------------------------------------------------------------------------------

(source_file
  (type_var)
  (type_var)
  (type_var))

================================================================================
Field access
================================================================================

.x
.name
.health-points

--------------------------------------------------------------------------------

(source_file
  (field_access)
  (field_access)
  (field_access))

================================================================================
Vector literal
================================================================================

[1 2 3]

--------------------------------------------------------------------------------

(source_file
  (vector_literal
    (number)
    (number)
    (number)))

================================================================================
Empty vector
================================================================================

[]

--------------------------------------------------------------------------------

(source_file
  (vector_literal))

================================================================================
Map literal
================================================================================

{:name "Alice" :age 30}

--------------------------------------------------------------------------------

(source_file
  (map_literal
    (keyword)
    (string)
    (keyword)
    (number)))

================================================================================
Operators
================================================================================

+ - * /
< > <= >= = !=

--------------------------------------------------------------------------------

(source_file
  (operator)
  (operator)
  (operator)
  (operator)
  (operator)
  (operator)
  (operator)
  (operator)
  (operator)
  (operator))

================================================================================
Symbols
================================================================================

foo
bar-baz
is-even?
make!
_private

--------------------------------------------------------------------------------

(source_file
  (symbol)
  (symbol)
  (symbol)
  (symbol)
  (symbol))
